--- a/ChessTournaments/View/OrganizerDashboard.xaml
+++ b/ChessTournaments/View/OrganizerDashboard.xaml
@@ -107,6 +107,11 @@
                            Command="{Binding DeleteTournament}"
                            CommandParameter="{Binding ElementName=organizerDashboard}">
                                 Usun turniej</Button>
+
+                            <Button
+                           Margin="10"
+                           Command="{Binding ClearForm}">
+                                Wyczysc pola</Button>
                         </StackPanel>
                     </StackPanel>
 
