--- a/ChessTournaments/View/PlayerList.xaml
+++ b/ChessTournaments/View/PlayerList.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <ListView ItemsSource="{Binding Zgloszenia}">
+    <ListView ItemsSource="{Binding Zgloszenia}"
+              SelectedItem="{Binding WybraneZgloszenie}">
         <ListView.View >
         <GridView>
             <GridViewColumn Width="100" x:Name="kolImie">
