--- a/ChessTournaments/View/OrganizerDashboard.xaml
+++ b/ChessTournaments/View/OrganizerDashboard.xaml
@@ -138,12 +138,12 @@
                     <StackPanel Grid.Column="0" Grid.ColumnSpan="2">
 
                         <Button Margin="15"
-                                Command="{Binding ZaakceptujZgloszenie}"
-                                CommandParameter="{Binding PlayerListVM.WybraneZgloszenie}">
+                                Command="{Binding ZaakceptujZgloszenie}">
                             Zaakceptuj zgłoszenie
                         </Button>
 
-                        <Button Margin="15">
+                        <Button Margin="15"
+                                Command="{Binding OdrzucZgloszenie}">
                             Odrzuć zgłoszenie
                         </Button>
 
