bug fix playerdashboard

--- a/ChessTournaments/View/PlayerDashboard.xaml
+++ b/ChessTournaments/View/PlayerDashboard.xaml
@@ -54,14 +54,8 @@
 
             </TabItem>
             <TabItem x:Name="mojeTurnieje" Header="Moje Turnieje" HorizontalAlignment="Left">
-                 <i:Interaction.Triggers>
-                <i:EventTrigger EventName="SelectionChanged">
-                        <i:InvokeCommandAction Command="{Binding ZaktualizujStatus}"
-                                               CommandParameter="{Binding ElementName=organizerDashboard}"/>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-                
-                
+
+
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5*"/>
@@ -82,7 +76,7 @@
                     <StackPanel Grid.Column="0">
 
                         <StackPanel Orientation="Horizontal" Margin="10">
-                            <TextBlock Text="{Binding UserTournamentsVM.WybranyTurniej}" ></TextBlock>
+                            <TextBlock Text="{Binding UserTournamentsVM.WybranyTurniej.Nazwa}" ></TextBlock>
                         </StackPanel>
 
                         <StackPanel HorizontalAlignment="Center" >
