--- a/ChessTournaments/View/PlayerList.xaml
+++ b/ChessTournaments/View/PlayerList.xaml
@@ -72,7 +72,7 @@
                         </DataTemplate>
                     </GridViewColumn.CellTemplate>
                     <GridViewColumn.Header>
-                        <TextBlock Text="Płeć"></TextBlock>
+                        <TextBlock Text="Turniej"></TextBlock>
                     </GridViewColumn.Header>
                 </GridViewColumn>
 
